@@ -40,24 +40,32 @@ Description: Common architecture-specific header files for kernel of FreeBSD @ve
 
 
 Package: kfreebsd-image-@version@-@abiname@-686-smp
+Section: oldlibs
+Priority: extra
 Architecture: any-i386
 Depends: ${misc:Depends}, kfreebsd-image-@version@-@abiname@-686
 Description: kernel of FreeBSD @version@ (transitional package)
  This is a dependency package to handle upgrades, it can be safely removed.
 
 Package: kfreebsd-image-@major@-686-smp
+Section: oldlibs
+Priority: extra
 Architecture: any-i386
 Depends: ${misc:Depends}, kfreebsd-image-@major@-686
 Description: kernel of FreeBSD @major@ (transitional package)
  This is a dependency package to handle upgrades, it can be safely removed.
 
 Package: kfreebsd-headers-@version@-@abiname@-686-smp
+Section: oldlibs
+Priority: extra
 Architecture: any-i386
 Depends: ${misc:Depends}, kfreebsd-headers-@version@-@abiname@-686
 Description: header files for kernel of FreeBSD @version@ (transitional package)
  This is a dependency package to handle upgrades, it can be safely removed.
 
 Package: kfreebsd-headers-@major@-686-smp
+Section: oldlibs
+Priority: extra
 Architecture: any-i386
 Depends: ${misc:Depends}, kfreebsd-headers-@version@-@abiname@-686
 Description: header files for kernel of FreeBSD @major@ (transitional package)
